# CWebSocketServerForFlutterPanel

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  WEBSOCKET_BRIGHTNESS_API.md  WEBSOCKET_WIFI_API.md  clang_check_report.txt  main.c  project.cppcheck  ws_utils.c  ws_utils.h
.github/workflows/: cmake-single-platform.yml
brightness/: brightness_def.h  brightness_scheduler.c  brightness_scheduler.h
brightness/fun/: brightness_set.c  brightness_set.h  brightness_status.c  brightness_status.h
doc/doxygen/: Doxyfile
modules/brightness/: brightness_def.h  brightness_scheduler.c  brightness_scheduler.h
modules/brightness/impl/: brightness_impl.c  brightness_impl.h
modules/brightness/protocol/: brightness_set.c  brightness_set.h  brightness_status.c  brightness_status.h
modules/wifi/: wifi_def.h  wifi_scheduler.c  wifi_scheduler.h
modules/wifi/impl/: wifi_impl.c  wifi_impl.h
modules/wifi/protocol/: wifi_connect.c  wifi_connect.h  wifi_disconnect.c  wifi_disconnect.h  wifi_enable.c  wifi_enable.h  wifi_scan.c  wifi_scan.h  wifi_status.c  wifi_status.h
protocol/: protocol_utils.c  protocol_utils.h
tools/: add_apache_header.py  check_clang.sh  clang_check_report.sh  run_clang_check.sh
wifi/: wifi_def.h  wifi_scheduler.c  wifi_scheduler.h
wifi/fun/: wifi_connect.c  wifi_connect.h  wifi_disconnect.c  wifi_disconnect.h  wifi_enable.c  wifi_enable.h  wifi_scan.c  wifi_scan.h  wifi_status.c  wifi_status.h
